@@ -2,7 +2,9 @@
 ---------
 * add .xlsx format support
 * add ability to invalide all cache at startup (set `INVALIDATE_CACHE` env variable)
+* add ability to create default users at startup (set `AUTOCREATE_USERS` env variable)
 *
+
 
 1.4.1
 -----
